# SerialDebugAssistant

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SerialDebugAssistant.sln  docker-compose.yml  pyproject.toml
Models/: LogEntry.cs  Models.csproj  OperationResult.cs  SerialMessage.cs  SerialPortConfig.cs
Models/Enums/: ChecksumType.cs  DataDisplayMode.cs  MessageDirection.cs
Properties/: AppConstants.cs  AppSettings.cs
SerialDebugAssistant/: MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  SerialDebugAssistant.csproj
Services/: ChecksumService.cs  ConfigService.cs  LogService.cs  SerialService.cs  Services.csproj
Services/Interfaces/: IChecksumService.cs  IConfigService.cs  ILogService.cs  ISerialService.cs
Text/: EncodingHelperTests.cs  FileHelperTests.cs  HexConverterTests.cs  Text.csproj  TimeHelperTests.cs  ValidationHelperTests.cs
Utils/: EncodingHelper.cs  FileHelper.cs  HexConverter.cs  TimeHelper.cs  Utils.csproj  ValidationHelper.cs
ai-service/: README.md
ai-service/app/: main.py
backend/: Dockerfile  pom.xml
docs/: project-description.md
emotion-system/: docker-compose.yml
emotion-system/ai-service/: Dockerfile  app.py
emotion-system/backend/: Dockerfile  pom.xml
emotion-system/frontend/: index.html
frontend/src/: App.vue  style.css
src/: README.md  __init__.py
src/agents/: README.md  __init__.py
src/memory/: README.md  __init__.py
src/orchestrator/: README.md  __init__.py
src/pipelines/: README.md  __init__.py
src/tools/: README.md  __init__.py
tests/: README.md  test_placeholder.py
(+43 files in other folders)
